# bookshelf

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  env.example  main.py  mypy.ini  pyproject.toml  run.py  run.sh
app/: models.py  settings.py
app/crud/: base.py  books.py  comments.py  manager.py  publishers.py  users.py
app/database/: base.py  connector.py
app/handlers/: auth.py  bookmarks.py  books.py  bookshelf.py  comments.py  user_data.py
app/handlers/admin/: base.py  users.py
app/media_storage/: __init__.py  base.py  local.py  media.py  s3.py  yandex.py
app/middlewares/: logging.py
app/orm/: base_model.py  query_formats.py  session_manager.py
app/schemas/: auth.py  base.py  books.py  bookshelf.py  comments.py  pdf_history.py  user_data.py  users.py
app/services/: auth.py  bookmarks.py  books.py  bookshelf.py  cache.py  celery.py  comments.py  email.py  encrypt.py  paginator.py  pdf_history.py  permissions.py  publishers.py  thumbnail.py  user_data.py  users.py
app/services/aaa/: __init__.py  exc.py  jwt.py  reset_password.py  users.py
app/services/cache/: __init__.py  deco.py  local.py  redis.py
config/env/: api.sample  pgadmin.sample  postgres.sample
config/nginx/: frontend.conf  pgadmin.conf
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  appInstance.ts  books.ts  comment.ts  errorFmt.ts  filters.ts  formatter.ts  languages.ts  main.ts  router.ts  styles.css  theming.ts  user.ts  validators.ts  vite-env.d.ts
frontend/src/assets/: main.css
frontend/src/components/: BookCard.vue  BookForm.vue  BookViewStats.vue  Bookmarks.vue  BookshelfImages.vue  BookshelfRow.vue  Comment.vue  CreateBookForm.vue  CreateComment.vue  EmailSend.vue  Footer.vue  FullSearchBooks.vue  Header.vue  HelloWorld.vue  LanguageDropdown.vue  LoginForm.vue  Menu.vue  RecentBooks.vue  RegisterForm.vue  SearchBookForm.vue
frontend/src/pages/: BookPage.vue  Bookshelves.vue  CreateBook.vue  CreateUpdateBookshelf.vue  Favorites.vue  ForgotPassword.vue  Home.vue  LastViewed.vue  Login.vue  ReadBooks.vue  Register.vue  ResetPassword.vue  ShowBook.vue  UpdateBook.vue
frontend/src/services/: auth.service.ts  books.ts  bookshelves.ts  setupInterceptors.ts  userData.ts
frontend/src/store/: auth.module.ts
index-meta-proxy/: Dockerfile  app.py
migrations/: env.py
migrations/versions/: 0001_init.py  0003_create_user_data.py  0006_add_bookshelf.py  0008_update_book_file_length.py  0009_add_bookshelf_private_filed.py  3c951d1adafe_0004_all_pdf_history_time.py  3f2ab1c32cba_0006_update_pdf_history_length.py  4185e1869021_0003_create_user_data.py  4de0b4ab42e5_0004_add_reset_passwd_email_datetime.py  76749e497766_0001_init.py  7d8b3af9b25a_0002_add_favorites_and_read_books.py  8426bfe1f49f_0001_init.py  995a0e8ce7c2_0001_init.py  b072bd343d98_0005_alter_preview_image_length.py  c4ba516667de_0001_init.py  cdb71ff6c1e8_0002_update_ondelete.py  d8ca12408ab8_0003_add_comments.py  e160cbf4df81_0001_init.py  fe5715882268_0001_init.py
nginx/: default.conf  frontend.conf  pgadmin.conf
src/application/books/: commands.py  dto.py  handlers.py  services.py
src/application/bookshelves/: commands.py  dto.py  handlers.py
src/application/comments/: commands.py  dto.py  handler.py  queries.py
src/application/history/: commands.py  dto.py  handlers.py
src/application/services/: cache.py  email.py  storage.py  task_manager.py  thumbnail.py
src/application/users/: commands.py  dto.py  handlers.py  queries.py  services.py
src/domain/auth/: entities.py  repository.py  services.py
src/domain/books/: entities.py  repository.py
src/domain/bookshelves/: entities.py  repository.py
src/domain/comments/: entities.py  repository.py
src/domain/common/: exceptions.py  unit_of_work.py
src/domain/history/: entities.py  repository.py
src/domain/users/: entities.py  repository.py
src/infrastructure/: celery.py  dependencies.py  email.py  logging.py  settings.py
src/infrastructure/auth/: captcha.py  hashers.py  token_service.py
src/infrastructure/cache/: __init__.py  deco.py  local.py  redis.py
src/infrastructure/db/: base_model.py  exception_handler.py  models.py  session_manager.py  unit_of_work.py
src/infrastructure/media_storage/: __init__.py  local.py  s3.py
src/presentation/api/: auth.py  dependencies.py  exception_handlers.py  (+1 more)
tests/: __init__.py  init.py  test_permissions.py  tests_handlers_auth.py  tests_handlers_bookmarks.py  tests_handlers_books.py  tests_handlers_comments.py  tests_service_encryption.py
tests/handlers/: auth.py  books.py
(+43 files in other folders)
